New Website look

--- a/My-Epic-Web-Page.html
+++ b/My-Epic-Web-Page.html
@@ -2,21 +2,34 @@
 <html lang="en-us">
     <head>
         <meta charset="utf-8" />
-          <title>This Website</title>
+              <title>This Website</title>
+              <link rel="stylesheet" href="My-Epic-Web-Page\assets.css">
     </head>
+<body>
 <main>
- <Article>
-    <Section>
+<div class= "title">
+    <h1>
+        <strong>William Wassmann</strong>
+    </h1>
+</div> <Article>
+    <Section class= "main">
     <p>
         Hello, this is my website lol. It's really professional
     </p>
 </section>
-    <section>
+    <section class ="rambling">
     <p>
+       <ul>
+        <li>   
         This also is a sentence.
+        </li>
+        <li>
+        More sentences, except this one is kinda biggish.
+        </li>
+       </ul>
     </p>
-    </section>
-
+  </section>
+ 
  </Article>
 </main>
-
+</body>
